[package]
name = "convert_core"
version = "2.0.0"
edition = "2024"

[lib]
name = "convert_core"
crate-type = ["cdylib"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
sha2 = { version = "0.10.9", default-features = false }
sha1 = { version = "0.10.6", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
hmac = { version = "0.12.1", default-features = false }
flate2 = { version = "1.1.8", default-features = false, features = ["rust_backend"] }
percent-encoding = { version = "2.3.2", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.43", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.9.0"
